# autocar

./: .gitignore  CLAUDE.md  CMakeLists.txt
config/launch/: autocar_bringup.launch.py
config/params/: localization.yaml  motor.yaml  mqtt.yaml  safety.yaml
docs/superpowers/plans/: 2026-06-14-autocar-implementation-plan.md  2026-06-18-autocar-simulation-implementation.md
docs/superpowers/specs/: 2026-06-14-autocar-system-design.md  2026-06-17-autocar-simulation-design.md
simulation/: chassis_simulator.py  cmd_vel_pub.py  deploy.sh  motor_test.py  run_all.sh  test_traffic.py
src/application/: package.xml  setup.py
src/application/autocar_application/: __init__.py  mqtt_command_bridge.py  state_machine.py  voice_pipeline.py  web_dashboard.py
src/application/test/: test_state_machine.py  test_voice_pipeline.py
src/control/: CMakeLists.txt  package.xml
src/control/include/autocar_control/: chassis_protocol.hpp  pid_controller.hpp
src/control/src/: chassis_protocol.cpp  motor_driver.cpp  pid_controller.cpp  safety_watchdog.cpp  steering_controller.cpp  velocity_controller.cpp
src/control/test/: CMakeLists.txt  test_chassis_protocol.cpp  test_motor_driver.cpp  test_pid.cpp  test_safety_watchdog.cpp  test_velocity_controller.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: SafetyState.msg
src/interfaces/srv/: PlanRequest.srv  QueryLocalPlan.srv
src/perception/: CMakeLists.txt  package.xml
src/perception/include/autocar_perception/: kalman_filter.hpp
src/perception/src/: camera_driver.cpp  gps_driver.cpp  imu_driver.cpp  kalman_filter.cpp  lidar_driver.cpp  localization_fusion.cpp  slam_node.cpp
src/perception/test/: CMakeLists.txt  test_kalman.cpp
src/planning/: CMakeLists.txt  package.xml
src/planning/include/autocar_planning/: astar.hpp  behavior_nodes.hpp  dwa_planner.hpp
src/planning/src/: astar.cpp  behavior_nodes.cpp  behavior_tree.cpp  dwa_planner.cpp  global_planner.cpp  local_planner.cpp
src/planning/test/: CMakeLists.txt  test_astar.cpp
src/simulation/: CMakeLists.txt  package.xml
src/simulation/config/: sim_params.yaml
src/simulation/launch/: autocar_full.launch.py  sim_bringup.launch.py  spawn_robot.py
src/simulation/models/autocar_car/: model.config  model.sdf
src/simulation/src/: simulation_bridge.cpp
src/simulation/test/: CMakeLists.txt  test_simulation_bridge.cpp
src/simulation/worlds/: city_street.sdf  empty.world  test_obstacle.sdf
